menyelesaikan bagian hero section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
     <section id="home" class="pt-36">
         <div class="container">
             <div class="flex flex-wrap">
-                <div class="w-full self-center px-4">
-                    <h1 class="text-base font-semibold text-primary">Hallo Semua, Saya Jepri Alber</h1>
-                    <h2>Web Developer & Blogger</h2>
-                    <p>Sebagai Web developer dan blogger saya sangat menyukai yang berhubungan dengan teknologi dan website.</p>
+                <div class="w-full self-center px-4 lg:w-1/2">
+                    <h1 class="text-base font-semibold text-primary md:text-xl">Hallo Semua, 👋<span class="block font-bold text-dark text-4xl mt-2 lg:text-5xl">Saya Jepri Alber</span></h1>
+                    <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl"><span class="text-dark">Web Developer</span> & Blogger</h2>
+                    <p class="font-medium text-slate-400 mb-10 leading-relaxed">Sebagai Web developer dan blogger saya sangat menyukai yang berhubungan dengan teknologi dan website.</p>
+                    <a href="#" class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi Saya</a>
+                </div>
+                
+                <div class="w-full self-end px-4 lg:w-1/2"> 
+                    <div class="relative mt-10 lg:m-0 lg:right-0">
+                        <img src="dist/img/profile.png" alt="jepri_alber" class="max-w-full mx-auto">
+                        <span class="absolute -bottom-10 -z-10 left-1/2 -translate-x-1/2 lg:scale-145 lg:bottom-0">
+                            <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="#06b6d4" d="M50,-54.4C61.2,-38.9,64.1,-19.4,64.2,0.2C64.4,19.7,61.8,39.5,50.6,52.8C39.5,66,19.7,72.9,2,70.9C-15.8,68.9,-31.5,58.1,-42.2,44.8C-53,31.5,-58.6,15.8,-56.7,1.9C-54.8,-11.9,-45.3,-23.9,-34.6,-39.4C-23.9,-54.9,-11.9,-73.9,3.7,-77.7C19.4,-81.4,38.9,-69.9,50,-54.4Z" transform="translate(100 100) scale(0.8)" />
+                              </svg>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
