--- a/index.html
+++ b/index.html
@@ -101,35 +101,35 @@
             <div class="w-full px-4">
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-smibold text-lg text-primary mb-2">Portofolio</h4>
-                    <h2 class="font-bold text-dark text-3xl mb-4">Project Terbaru</h2>
+                    <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
                     <p class="font-medium text-md text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae reiciendis labore fuga quo distinctio quam deserunt. Aliquam laboriosam voluptate explicabo libero? Excepturi earum repellat ab voluptates deleniti? Molestias, maxime quis.</p>
                 </div>
             </div>
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12  xl:mx-auto">
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/portofolio/portofolio.jpg" alt="portofolio" width="w-full" >
+                        <img src="dist/img/portofolio/portofolio-acht.png" alt="portofolio" class="w-full" >
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5">Contoh Project Portofolio</h3>
                     <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi sapiente eum corporis nesciunt, quibusdam doloribus. Laborum nemo et numquam reprehenderit laboriosam, magnam, ipsam corporis similique exercitationem, atque at consequuntur!</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/portofolio/portofolio.jpg" alt="portofolio" width="w-full" >
+                        <img src="dist/img/portofolio/portofolio-isp.png" alt="portofolio" class="w-full" >
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5">Contoh Project Portofolio</h3>
                     <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi sapiente eum corporis nesciunt, quibusdam doloribus. Laborum nemo et numquam reprehenderit laboriosam, magnam, ipsam corporis similique exercitationem, atque at consequuntur!</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/portofolio/portofolio.jpg" alt="portofolio" width="w-full" >
+                        <img src="dist/img/portofolio/portofolio-oneasia.png" alt="portofolio" class="w-full" >
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5">Contoh Project Portofolio</h3>
                     <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi sapiente eum corporis nesciunt, quibusdam doloribus. Laborum nemo et numquam reprehenderit laboriosam, magnam, ipsam corporis similique exercitationem, atque at consequuntur!</p>
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="dist/img/portofolio/portofolio.jpg" alt="portofolio" width="w-full" >
+                        <img src="dist/img/portofolio/portofolio-smart.png" alt="portofolio" class="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5">Contoh Project Portofolio</h3>
                     <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi sapiente eum corporis nesciunt, quibusdam doloribus. Laborum nemo et numquam reprehenderit laboriosam, magnam, ipsam corporis similique exercitationem, atque at consequuntur!</p>
@@ -139,6 +139,50 @@
     </section>
     <!-- portofolio section end -->
 
+    <!-- clients section start -->
+        <section id="clients" class="pt-36 pb-32 bg-slate-700">
+            <div class="container">
+                <div class="w-full px-4">
+                    <div class="max-auto text-center mb-16">
+                        <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
+                        <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
+                        <p class="font-medium test-md text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla error dolores facilis eveniet accusamus quae ratione corrupti repellendus laboriosam, et blanditiis nisi ea recusandae, ut saepe deserunt facere aliquid amet?</p>
+                    </div>
+                </div>
+                <div class="w-full px-4">
+                    <div class="flex flex-wrap items-center justify-center">
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/Esa Asia.png" alt="">
+                        </a>
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/kanten.png" alt="">
+                        </a>
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/KEREN.png" alt="">
+                        </a>
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/kreen.png" alt="">
+                        </a>
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/MKTI2.png" alt="">
+                        </a>
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/onerah.png" alt="">
+                        </a>
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/onesia.png" alt="">
+                        </a>
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/raiwa.png" alt="">
+                        </a>
+                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                            <img src="dist/img/clients/TSN.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!-- client section end -->
     <script src="dist/js/script.js"></script>
 </body>
 </html>
