menyelesaikan section bagian blog

--- a/index.html
+++ b/index.html
@@ -140,49 +140,95 @@
     <!-- portofolio section end -->
 
     <!-- clients section start -->
-        <section id="clients" class="pt-36 pb-32 bg-slate-700">
-            <div class="container">
-                <div class="w-full px-4">
-                    <div class="max-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
-                        <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
-                        <p class="font-medium test-md text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla error dolores facilis eveniet accusamus quae ratione corrupti repellendus laboriosam, et blanditiis nisi ea recusandae, ut saepe deserunt facere aliquid amet?</p>
+    <section id="clients" class="pt-36 pb-32 bg-slate-700">
+        <div class="container">
+            <div class="w-full px-4">
+                <div class="max-auto text-center mb-16">
+                    <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
+                    <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
+                    <p class="font-medium test-md text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla error dolores facilis eveniet accusamus quae ratione corrupti repellendus laboriosam, et blanditiis nisi ea recusandae, ut saepe deserunt facere aliquid amet?</p>
+                </div>
+            </div>
+            <div class="w-full px-4">
+                <div class="flex flex-wrap items-center justify-center">
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/Esa Asia.png" alt="">
+                    </a>
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/kanten.png" alt="">
+                    </a>
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/KEREN.png" alt="">
+                    </a>
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/kreen.png" alt="">
+                    </a>
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/MKTI2.png" alt="">
+                    </a>
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/onerah.png" alt="">
+                    </a>
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/onesia.png" alt="">
+                    </a>
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/raiwa.png" alt="">
+                    </a>
+                    <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
+                        <img src="dist/img/clients/TSN.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- client section end -->
+
+    <!-- blog section start -->
+    <section id="blog" class="pt-36 pb-32 bg-slate-100">
+        <div class="container">
+            <div class="w-full px-4">
+                <div class="max-w-full mx-auto text-center mb-16">
+                    <h4 class="font-semibold text-xl text-primary mb-2">Blog</h4>
+                    <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Tulisan terkini</h2>
+                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto voluptatem reprehenderit mollitia, minima eaque dolorem nulla nemo dicta et voluptas amet voluptate veritatis ea iusto similique facilis alias quisquam? Explicabo!</p>
+                </div>
+            </div>
+            <div class="flex flex-wrap">
+                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                        <img src="dist/img/blog/ai bias.png" alt="ai bias" class="w-full">
+                        <div class="py-8 px-6">
+                            <h3><a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Bias AI Adalah Pengertian, Penyebab dan Solusi</a></h3>
+                            <p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi eos delectus exercitationem temporibus laborum, dolorum aut ea fuga debitis? Ipsam, dicta tempore. Voluptatem reprehenderit consequuntur quidem recusandae. Eaque, illo autem.</p>
+                            <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca Selengkapnya</a>
+                        </div>
                     </div>
                 </div>
-                <div class="w-full px-4">
-                    <div class="flex flex-wrap items-center justify-center">
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/Esa Asia.png" alt="">
-                        </a>
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/kanten.png" alt="">
-                        </a>
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/KEREN.png" alt="">
-                        </a>
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/kreen.png" alt="">
-                        </a>
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/MKTI2.png" alt="">
-                        </a>
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/onerah.png" alt="">
-                        </a>
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/onesia.png" alt="">
-                        </a>
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/raiwa.png" alt="">
-                        </a>
-                        <a href="#" class="mx-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/TSN.png" alt="">
-                        </a>
+                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                        <img src="dist/img/blog/ciri ciri antivirus palsu.png" alt="ai bias" class="w-full">
+                        <div class="py-8 px-6">
+                            <h3><a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Ciri ciri Antivirus Palsu: Contoh dan Cara menghindari</a></h3>
+                            <p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi eos delectus exercitationem temporibus laborum, dolorum aut ea fuga debitis? Ipsam, dicta tempore. Voluptatem reprehenderit consequuntur quidem recusandae. Eaque, illo autem.</p>
+                            <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca Selengkapnya</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+                    <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+                        <img src="dist/img/blog/refactoring code.png" alt="ai bias" class="w-full">
+                        <div class="py-8 px-6">
+                            <h3><a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate">Refactoring Code: Pengertian, Metode dan Tips Trik</a></h3>
+                            <p class="font-medium text-base text-secondary mb-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi eos delectus exercitationem temporibus laborum, dolorum aut ea fuga debitis? Ipsam, dicta tempore. Voluptatem reprehenderit consequuntur quidem recusandae. Eaque, illo autem.</p>
+                            <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover:opacity-80">Baca Selengkapnya</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-    <!-- client section end -->
+        </div>
+    </section>
+    <!-- blog section end -->
     <script src="dist/js/script.js"></script>
 </body>
 </html>
