--- a/index.html
+++ b/index.html
@@ -561,6 +561,11 @@
       </div>
     </footer>
     <!-- footer section end -->
+    <!-- back to top start -->
+    <a href="#home" class="fixed bottom-4 right-4 z-[9999] hidden h-14 w-14 items-center justify-center rounded-full bg-primary p-4 hover:animate-pulse text-white" id="to-top">
+        <span class="block h-5 w-5 rotate-45 border-t-2 mt-2 border-l-2"></span>
+    </a>
+    <!-- back to top end -->
     <script src="dist/js/script.js"></script>
   </body>
 </html>
