--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio-simple-tailwind</title>
     <link href="dist/output.css" rel="stylesheet" />
+    <script>
+      document.documentElement.classList.toggle(
+        'dark',
+        localStorage.theme === 'dark' ||
+          (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
+      );
+    </script>
   </head>
   <body>
-    <header class="item-center absolute top-0 left-0 z-10 flex w-full bg-transparent">
+    <header class="absolute top-0 left-0 z-10 flex w-full items-center bg-transparent">
       <div class="container">
-        <div class="item-center relative flex justify-between">
+        <div class="relative flex items-center justify-between">
           <div class="px-4">
             <a href="#home" class="text-primary block py-6 text-lg font-bold">Jepri Alber</a>
           </div>
-          <div class="item-center flex px-4">
+          <div class="flex items-center px-4">
             <button
               id="hamburger"
               name="hamburger"
@@ -27,35 +34,49 @@
             </button>
             <nav
               id="nav-menu"
-              class="absolute top-full right-4 hidden w-full max-w-[250] rounded-lg bg-white py-5 shadow-lg lg:static lg:block lg:max-w-full lg:rounded-none lg:bg-transparent lg:shadow-none">
+              class="dark:bg-dark absolute top-full right-4 hidden w-full max-w-[250px] rounded-lg bg-white py-5 shadow-lg transition-colors duration-300 lg:static lg:block lg:max-w-full lg:rounded-none lg:bg-transparent lg:shadow-none dark:shadow-slate-500 lg:dark:bg-transparent">
               <ul class="block lg:flex">
                 <li class="group">
                   <a
                     href="#home"
-                    class="text-dark group-hover:text-primary mx-8 flex py-2 text-base">
+                    class="text-dark group-hover:text-primary mx-8 flex py-2 text-base dark:text-white">
                     Beranda
                   </a>
                 </li>
                 <li class="group">
                   <a
                     href="#about"
-                    class="text-dark group-hover:text-primary mx-8 flex py-2 text-base">
+                    class="text-dark group-hover:text-primary mx-8 flex py-2 text-base dark:text-white">
                     Tentang Saya
                   </a>
                 </li>
                 <li class="group">
                   <a
                     href="#clients"
-                    class="text-dark group-hover:text-primary mx-8 flex py-2 text-base">
+                    class="text-dark group-hover:text-primary mx-8 flex py-2 text-base dark:text-white">
                     Clients
                   </a>
                 </li>
                 <li class="group">
                   <a
                     href="#contact"
-                    class="text-dark group-hover:text-primary mx-8 flex py-2 text-base">
+                    class="text-dark group-hover:text-primary mx-8 flex py-2 text-base dark:text-white">
                     Contact
                   </a>
+                </li>
+                <li class="mt-3 flex items-center pl-8 lg:mt-0">
+                  <div class="flex">
+                    <div class="mr-2 text-sm text-slate-500">light</div>
+                    <input type="checkbox" id="dark-toggle" class="hidden" />
+                    <label for="dark-toggle">
+                      <div
+                        class="flex h-5 w-9 cursor-pointer items-center rounded-full bg-slate-500 p-1">
+                        <div
+                          class="toggle-circle h-4 w-4 rounded-full bg-white duration-300 ease-in-out"></div>
+                      </div>
+                    </label>
+                    <span class="ml-2 text-sm text-slate-500">dark</span>
+                  </div>
                 </li>
               </ul>
             </nav>
@@ -65,18 +86,18 @@
     </header>
 
     <!-- Hero Section Start  -->
-    <section id="home" class="pt-36">
+    <section id="home" class="dark:bg-dark pt-36 transition-colors duration-300">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-primary text-base font-semibold md:text-xl">
               Hallo Semua, 👋
-              <span class="text-dark mt-2 block text-4xl font-bold lg:text-5xl">
+              <span class="text-dark mt-2 block text-4xl font-bold lg:text-5xl dark:text-white">
                 Saya Jepri Alber
               </span>
             </h1>
             <h2 class="text-secondary mb-5 text-lg font-medium lg:text-2xl">
-              <span class="text-dark">Web Developer</span>
+              <span class="text-dark dark:text-white">Web Developer</span>
               & Blogger
             </h2>
             <p class="text-secondary mb-10 leading-relaxed font-medium">
@@ -92,9 +113,11 @@
 
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:m-0">
-              <img src="dist/img/profile.png" alt="jepri_alber" class="mx-auto max-w-full" />
-              <span
-                class="absolute -bottom-10 left-1/2 -z-10 -translate-x-1/2 lg:bottom-0 lg:scale-145">
+              <img
+                src="dist/img/profile.png"
+                alt="jepri_alber"
+                class="relative z-10 mx-auto max-w-full" />
+              <span class="absolute -bottom-10 left-1/2 -translate-x-1/2 lg:bottom-0 lg:scale-145">
                 <svg
                   width="400"
                   height="400"
@@ -114,12 +137,12 @@
     <!-- Hero Section End -->
 
     <!-- About Section Start -->
-    <section id="about" class="pt-36 pb-32">
+    <section id="about" class="dark:bg-dark pt-36 pb-32 transition-colors duration-300">
       <div class="container">
         <div class="flex flex-wrap">
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="text-primary text-lg font-bold uppercase">Tentang Saya</h4>
-            <h2 class="text-dark mb-5 max-w-md text-3xl font-bold lg:text-3xl">
+            <h2 class="text-dark mb-5 max-w-md text-3xl font-bold lg:text-3xl dark:text-white">
               Saya Merupakan Freelancer Web Programming!
             </h2>
             <p class="text-secondary max-w-xl text-base font-medium lg:text-lg">
@@ -128,16 +151,18 @@
             </p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
-            <h3 class="text-dark mb-4 text-2xl font-semibold lg:pt-7 lg:text-3xl">Mari Berteman</h3>
+            <h3 class="text-dark mb-4 text-2xl font-semibold lg:pt-7 lg:text-3xl dark:text-white">
+              Mari Berteman
+            </h3>
             <p class="text-secondary mb-6 text-base font-medium lg:text-lg">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi dignissimos
               doloribus officiis error nam laboriosam eligendi vitae quaerat!
             </p>
-            <div class="item-center flex">
+            <div class="flex items-center">
               <!-- github -->
               <a
                 href="https://github.com/jepriAlber/"
-                class="hover:border-primary hover:bg-primary mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 hover:text-white">
+                class="hover:border-primary hover:bg-primary mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 hover:text-white dark:text-white">
                 <svg
                   role="img"
                   width="20"
@@ -152,7 +177,7 @@
               <!-- instagram -->
               <a
                 href="https://www.instagram.com/jeprialber/"
-                class="hover:border-primary hover:bg-primary mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 hover:text-white">
+                class="hover:border-primary hover:bg-primary mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 hover:text-white dark:text-white">
                 <svg
                   role="img"
                   width="20"
@@ -172,12 +197,14 @@
     <!-- About Section End -->
 
     <!-- portofolio section start -->
-    <section id="portofolio" class="bg-slate-100 pt-36 pb-16">
+    <section
+      id="portofolio"
+      class="bg-slate-100 pt-36 pb-16 transition-colors duration-300 dark:bg-slate-800">
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="font-smibold text-primary mb-2 text-lg">Portofolio</h4>
-            <h2 class="text-dark mb-4 text-3xl font-bold sm:text-4xl lg:text-5xl">
+            <h2 class="text-dark mb-4 text-3xl font-bold sm:text-4xl lg:text-5xl dark:text-white">
               Project Terbaru
             </h2>
             <p class="text-md text-secondary font-medium">
@@ -192,7 +219,9 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portofolio/portofolio-acht.png" alt="portofolio" class="w-full" />
             </div>
-            <h3 class="text-dark mt-5 text-xl font-semibold">Contoh Project Portofolio</h3>
+            <h3 class="text-dark mt-5 text-xl font-semibold dark:text-white">
+              Contoh Project Portofolio
+            </h3>
             <p class="text-secondary text-base font-medium">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi sapiente eum
               corporis nesciunt, quibusdam doloribus. Laborum nemo et numquam reprehenderit
@@ -203,7 +232,9 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portofolio/portofolio-isp.png" alt="portofolio" class="w-full" />
             </div>
-            <h3 class="text-dark mt-5 text-xl font-semibold">Contoh Project Portofolio</h3>
+            <h3 class="text-dark mt-5 text-xl font-semibold dark:text-white">
+              Contoh Project Portofolio
+            </h3>
             <p class="text-secondary text-base font-medium">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi sapiente eum
               corporis nesciunt, quibusdam doloribus. Laborum nemo et numquam reprehenderit
@@ -217,7 +248,9 @@
                 alt="portofolio"
                 class="w-full" />
             </div>
-            <h3 class="text-dark mt-5 text-xl font-semibold">Contoh Project Portofolio</h3>
+            <h3 class="text-dark mt-5 text-xl font-semibold dark:text-white">
+              Contoh Project Portofolio
+            </h3>
             <p class="text-secondary text-base font-medium">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi sapiente eum
               corporis nesciunt, quibusdam doloribus. Laborum nemo et numquam reprehenderit
@@ -228,7 +261,9 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portofolio/portofolio-smart.png" alt="portofolio" class="w-full" />
             </div>
-            <h3 class="text-dark mt-5 text-xl font-semibold">Contoh Project Portofolio</h3>
+            <h3 class="text-dark mt-5 text-xl font-semibold dark:text-white">
+              Contoh Project Portofolio
+            </h3>
             <p class="text-secondary text-base font-medium">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum nisi sapiente eum
               corporis nesciunt, quibusdam doloribus. Laborum nemo et numquam reprehenderit
@@ -241,12 +276,14 @@
     <!-- portofolio section end -->
 
     <!-- clients section start -->
-    <section id="clients" class="bg-slate-700 pt-36 pb-32">
+    <section
+      id="clients"
+      class="bg-slate-700 pt-36 pb-32 transition-colors duration-300 dark:bg-slate-300">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-auto mb-16 text-center">
             <h4 class="text-primary mb-2 text-lg font-semibold">Clients</h4>
-            <h2 class="mb-4 text-3xl font-bold text-white sm:text-4xl lg:text-5xl">
+            <h2 class="dark:text-dark mb-4 text-3xl font-bold text-white sm:text-4xl lg:text-5xl">
               Yang Pernah Bekerjasama
             </h2>
             <p class="test-md text-secondary font-medium">
@@ -310,12 +347,12 @@
     <!-- client section end -->
 
     <!-- blog section start -->
-    <section id="blog" class="bg-slate-100 pt-36 pb-32">
+    <section id="blog" class="dark:bg-dark bg-slate-100 pt-36 pb-32">
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto mb-16 max-w-full text-center">
             <h4 class="text-primary mb-2 text-xl font-semibold">Blog</h4>
-            <h2 class="text-dark mb-4 text-3xl font-bold sm:text-4xl lg:text-5xl">
+            <h2 class="text-dark mb-4 text-3xl font-bold sm:text-4xl lg:text-5xl dark:text-white">
               Tulisan terkini
             </h2>
             <p class="text-md text-secondary font-medium md:text-lg">
@@ -327,13 +364,13 @@
         </div>
         <div class="flex flex-wrap">
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg">
+            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800">
               <img src="dist/img/blog/ai bias.png" alt="ai bias" class="w-full" />
               <div class="px-6 py-8">
                 <h3>
                   <a
                     href="#"
-                    class="text-dark hover:text-primary mb-3 block truncate text-xl font-semibold">
+                    class="text-dark hover:text-primary mb-3 block truncate text-xl font-semibold dark:text-white">
                     Bias AI Adalah Pengertian, Penyebab dan Solusi
                   </a>
                 </h3>
@@ -345,20 +382,20 @@
                 </p>
                 <a
                   href="#"
-                  class="bg-primary rounded-lg px-4 py-2 text-sm font-medium text-white hover:opacity-80">
+                  class="bg-primary rounded-lg px-4 py-2 text-sm font-medium text-white hover:opacity-80 dark:bg-slate-800">
                   Baca Selengkapnya
                 </a>
               </div>
             </div>
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg">
+            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800">
               <img src="dist/img/blog/ciri ciri antivirus palsu.png" alt="ai bias" class="w-full" />
               <div class="px-6 py-8">
                 <h3>
                   <a
                     href="#"
-                    class="text-dark hover:text-primary mb-3 block truncate text-xl font-semibold">
+                    class="text-dark hover:text-primary mb-3 block truncate text-xl font-semibold dark:text-white">
                     Ciri ciri Antivirus Palsu: Contoh dan Cara menghindari
                   </a>
                 </h3>
@@ -377,13 +414,13 @@
             </div>
           </div>
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
-            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg">
+            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800">
               <img src="dist/img/blog/refactoring code.png" alt="ai bias" class="w-full" />
               <div class="px-6 py-8">
                 <h3>
                   <a
                     href="#"
-                    class="text-dark hover:text-primary mb-3 block truncate text-xl font-semibold">
+                    class="text-dark hover:text-primary mb-3 block truncate text-xl font-semibold dark:text-white">
                     Refactoring Code: Pengertian, Metode dan Tips Trik
                   </a>
                 </h3>
@@ -407,12 +444,14 @@
     <!-- blog section end -->
 
     <!-- Contact section start -->
-    <section id="contact" class="pt-36 pb-32">
+    <section id="contact" class="pt-36 pb-32 transition-colors duration-300 dark:bg-slate-800">
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto mb-16 max-w-full text-center">
             <h4 class="text-primary mb-2 text-lg font-semibold">Contact</h4>
-            <h2 class="text-dark mb-4 text-3xl font-bold sm:text-4xl lg:text-5xl">Hubungi Saya!</h2>
+            <h2 class="text-dark mb-4 text-3xl font-bold sm:text-4xl lg:text-5xl dark:text-white">
+              Hubungi Saya!
+            </h2>
             <p class="text-md text-secondary font-medium">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum, architecto iusto
               necessitatibus esse est quod nihil?
@@ -518,7 +557,7 @@
           </div>
         </div>
         <div class="w-full border-t border-slate-700 pt-10">
-          <div class="item-center mb-5 flex justify-center">
+          <div class="mb-5 flex items-center justify-center">
             <!-- github -->
             <a
               href="https://github.com/jepriAlber/"
@@ -562,8 +601,11 @@
     </footer>
     <!-- footer section end -->
     <!-- back to top start -->
-    <a href="#home" class="fixed bottom-4 right-4 z-[9999] hidden h-14 w-14 items-center justify-center rounded-full bg-primary p-4 hover:animate-pulse text-white" id="to-top">
-        <span class="block h-5 w-5 rotate-45 border-t-2 mt-2 border-l-2"></span>
+    <a
+      href="#home"
+      class="bg-primary fixed right-4 bottom-4 z-[9999] hidden h-14 w-14 items-center justify-center rounded-full p-4 text-white hover:animate-pulse"
+      id="to-top">
+      <span class="mt-2 block h-5 w-5 rotate-45 border-t-2 border-l-2"></span>
     </a>
     <!-- back to top end -->
     <script src="dist/js/script.js"></script>
